--- a/myapp/src/main/webapp/WEB-INF/web.xml
+++ b/myapp/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,10 @@
   <servlet>
     <servlet-name>Login</servlet-name>
     <servlet-class>myweb.Login</servlet-class>
+    <init-param>
+      <param-name>pagename</param-name>
+      <param-value>Login</param-value>
+    </init-param>
   </servlet>
   <servlet-mapping>
     <servlet-name>Login</servlet-name>
@@ -15,11 +19,19 @@
   <servlet>
     <servlet-name>Dashboard</servlet-name>
     <servlet-class>myweb.Dashboard</servlet-class>
+    <init-param>
+      <param-name>pagename</param-name>
+      <param-value>Dashboard</param-value>
+    </init-param>
   </servlet>
   <servlet-mapping>
     <servlet-name>Dashboard</servlet-name>
     <url-pattern>/dashboard</url-pattern>
   </servlet-mapping>
+  <context-param>
+    <param-name>appname</param-name>
+    <param-value>MyApp</param-value>
+  </context-param>
   <welcome-file-list>
     <welcome-file>login</welcome-file>
   </welcome-file-list>
